...
import UIKit

class SearchVC: UIViewController {
    
    private lazy var logoImageView = UIImageView()
    
    private lazy var userNameTextFiled = UITextField(placeholder: "Enter a valid User")
    
    private lazy var callToActionButton = FGButton(backgroundColor: .systemGreen, text: "Get Followers")
    
    private var isUserNameEntered : Bool { return !userNameTextFiled.text!.isEmpty }
    
    override func viewDidLoad() {
...
